[package]
name = "lune-std-tauri"
version = "0.0.1"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Tauri standard library for Lune"

[features]
default = []

[dependencies]
mlua = { version = "0.11.4", features = ["luau", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }

lune-utils = { version = "0.3.4", path = "../lune-utils" }

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = [] }
